debuggeamos pca y nuestras eigen funciones

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,8 @@
         "valarray": "cpp",
         "variant": "cpp",
         "*.traits": "cpp",
-        "openglsupport": "cpp"
-    }
+        "openglsupport": "cpp",
+        "alignedvector3": "cpp"
+    },
+    "cmake.configureOnOpen": true
 }
