--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory(pybind11)
 pybind11_add_module(metnum
                     src/metnum.cpp
                     src/knn.cpp
+                    src/better_knn.cpp
                     src/pca.cpp
                     src/eigen.cpp)
 
@@ -51,6 +52,7 @@ install(TARGETS metnum DESTINATION ${CMAKE_INSTALL_PREFIX}/notebooks)
 add_executable(tp2
         src/main.cpp
         src/knn.cpp
+        src/better_knn.cpp
         src/pca.cpp
         src/eigen.cpp)
 
